--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -10,6 +10,13 @@ name: BatIntegrationTest
 
 jobs:
   build:
+    strategy:
+      fail-fast: false
+      matrix:
+        CM7: [1, 2, 3, 4]
+        config7: [5, 6, 7, 8]
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ inputs.portalName }}
+      - run: |
+          echo ${{ matrix.inputs.portalName }} 
+          echo ${{ inputs.portalName }}
