--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -10,13 +10,16 @@ name: BatIntegrationTest
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         CM7: [1, 2, 3, 4]
         config7: [5, 6, 7, 8]
-    runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo ${{ matrix.inputs.portalName }} 
+      - uses: actions/checkout@v3
+
+      - name: Run workflow with appropriate portal name
+        run: |
           echo ${{ inputs.portalName }}
+          echo ${{ matrix.inputs.portalName }}
