push local code to master

--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -11,6 +11,8 @@ jobs:
       matrix:
         tests: [CM7, config7]
     steps:
+      - uses: actions/checkout@v3
+
       - name: Run workflow with appropriate portal name
         uses: ./.github/workflows/integration-Bat.yml
         with:
