--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      fail-fast: false
+      max-parallel: 2
       matrix:
         tests: ${{ fromJson(inputs.suitesToRun) }}
 
