--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -4,15 +4,21 @@ on:
   workflow_dispatch:
 
 jobs:
+  integration:
+    name: Integration Test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        portalName: [CM7, config7]
+        suitesToRun:
+          - "['1', '2', '3', '4']"
+          - "['5', '6', '7', '8']"
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-  CM7:
-    uses: ./.github/workflows/integration-Bat.yml
-    with:
-      portalName: CM7
-      suitesToRun: "['1', '2', '3', '4']"
-
-  config7:
-    uses: ./.github/workflows/integration-Bat.yml
-    with:
-      portalName: config7
-      suitesToRun: "['5', '6', '7', '8']"
+      - name: Run integration test
+        uses: ./.github/workflows/integration-Bat.yml
+        with:
+          portalName: ${{ matrix.portalName }}
+          suitesToRun: ${{ matrix.suitesToRun }}
