--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -9,10 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        portalName: [CM7, config7]
-        suitesToRun:
-          - "['1', '2', '3', '4']"
-          - "['5', '6', '7', '8']"
+        Mapping:
+          - portalName: CM7
+            suitesToRun: "['1', '2', '3', '4']"
+
+          - portalName: config7
+            suitesToRun: "['5', '6', '7', '8']"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -20,5 +22,5 @@ jobs:
       - name: Run integration test
         uses: ./.github/workflows/integration-Bat.yml
         with:
-          portalName: ${{ matrix.portalName }}
-          suitesToRun: ${{ matrix.suitesToRun }}
+          portalName: ${{ matrix.Mapping.portalName }}
+          suitesToRun: ${{ matrix.Mapping.suitesToRun }}
