--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -16,11 +16,8 @@ jobs:
           - portalName: config7
             suitesToRun: "['5', '6', '7', '8']"
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
       - name: Run integration test
-        uses: ./.github/workflows/integration-Bat.yml
+        uses: .github/workflows/integration-Bat.yml
         with:
           portalName: ${{ matrix.Mapping.portalName }}
           suitesToRun: ${{ matrix.Mapping.suitesToRun }}
