--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -4,9 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  integration:
-    name: Integration Test
-    runs-on: ubuntu-latest
+  trigger:
     strategy:
       matrix:
         Mapping:
@@ -15,9 +13,7 @@ jobs:
 
           - portalName: config7
             suitesToRun: "['5', '6', '7', '8']"
-    steps:
-      - name: Run integration test
-        uses: .github/workflows/integration-Bat.yml
-        with:
-          portalName: ${{ matrix.Mapping.portalName }}
-          suitesToRun: ${{ matrix.Mapping.suitesToRun }}
+    uses: Dhivaagar/DemoProject/.github/workflows/integration-Bat.yml@main
+    with:
+      portalName: ${{ matrix.Mapping.portalName }}
+      suitesToRun: ${{ matrix.Mapping.suitesToRun }}
