--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -17,4 +17,4 @@ jobs:
     uses: ./.github/workflows/integration-Bat.yml
     with:
       portalName: ${{ matrix.Mapping.portalName }}
-      suitesToRun: ${{ matrix.Mapping.suitesToRun }}
+#      suitesToRun: ${{ matrix.Mapping.suitesToRun }}
