--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -27,23 +27,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install yq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+
       - name: Set suitesToRun
         id: set-suites
         run: |
           if [ -z "${{ github.event.inputs.suitesToRun }}" ]; then
             echo "No suitesToRun provided, reading from list.yml"
-            suites=$(yq '.items' list.yml)
-            echo "suitesToRun=$suites" >> $GITHUB_OUTPUT
+            suites=$(yq -o=json '.items' list.yml)
+            echo "suitesToRun=${suites}" >> $GITHUB_OUTPUT
           else
-            echo "suitesToRun=${{ github.event.inputs.suitesToRun }}" >> $GITHUB_OUTPUT
+            echo "suitesToRun=${{ inputs.suitesToRun }}" >> $GITHUB_OUTPUT
           fi
-
-      - name: Prepare matrix
-        id: prepare-matrix
-        run: |
-          echo "Matrix=${{ fromJson(env.suitesToRun) }}"
-        env:
-          suitesToRun: ${{ env.suitesToRun }}
 
   test:
     needs: build
@@ -59,5 +57,4 @@ jobs:
 
       - name: Run tests
         run: |
-          echo ${{ needs.build.outputs.suitesToRun }}
           echo "Running tests for ${{ matrix.tests }} in portal ${{ github.event.inputs.portalName }}"
