--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -47,11 +47,13 @@ jobs:
             const fs = require('fs');
             const yaml = require('js-yaml');
             const fileContents = fs.readFileSync('list.yml', 'utf8');
-            const data = yaml.load(fileContents);
+            const data = yaml.load(fileContents).items;
             console.log("Data: ", data);
-            console.log("Formatted Data:", JSON.stringify(JSON.parse(JSON.stringify(data.items))));
-            return JSON.stringify(JSON.parse(JSON.stringify(data.items)));
+            console.log(typeof data);
+            return JSON.stringify(data);
 
+      - name: Output
+        run: echo "Suites to run = ${{ steps.read-yaml.outputs.result }}"
 
   test:
     needs: build
