--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -2,13 +2,18 @@ name: one shot
 on:
   workflow_dispatch:
     inputs:
-      xmls:
-        description: "xml names (comma separated)"
+      portalNames:
+        description: "Portal Name"
         required: true
         type: string
 
-      shells:
-        description: "shell names (comma separated)"
+      rallyTestSetIds:
+        description: "Rally Test Set Ids"
+        required: true
+        type: string
+
+      rallyBuildNos:
+        description: "Rally Build Nos"
         required: true
         type: string
 
@@ -21,11 +26,12 @@ jobs:
       - name: Set up matrix
         id: set_matrix
         run: |
-          IFS=',' read -ra XML_ARRAY <<< "${{ github.event.inputs.xmls }}"
-          IFS=',' read -ra SHELL_ARRAY <<< "${{ github.event.inputs.shells }}"
+          IFS=',' read -ra PORTAL_ARRAY <<< "${{ github.event.inputs.portalNames }}"
+          IFS=',' read -ra RALLY_TEST_SET_IDS_ARRAY <<< "${{ github.event.inputs.rallyTestSetIds }}"
+          IFS=',' read -ra RALLY_BUILD_NOS_ARRAY <<< "${{ github.event.inputs.rallyBuildNos }}"
           MATRIX="["
-          for i in "${!XML_ARRAY[@]}"; do
-            MATRIX+="{\"xml\": \"${XML_ARRAY[i]}\", \"shell\": \"${SHELL_ARRAY[i]}\"},"
+          for i in "${!PORTAL_ARRAY[@]}"; do
+            MATRIX+="{\"portalName\": \"${PORTAL_ARRAY[i]}\", \"rallyTestSetIds\": \"${RALLY_TEST_SET_IDS_ARRAY[i]}\", \"rallyBuildNos\": \"${RALLY_BUILD_NOS_ARRAY[i]}\"},"
           done
           MATRIX=${MATRIX::-1} # remove the last comma
           MATRIX+="]"
@@ -33,11 +39,11 @@ jobs:
 
   run_tests:
     needs: generate_tests
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         data: ${{fromJson(needs.generate_tests.outputs.matrix)}}
-    steps:
-      - name: Run tests
-        run: |
-          echo "Running test for ${{ matrix.data.xml }} in shell ${{ matrix.data.shell }}"
+    uses: ./.github/workflows/integration-Bat.yml
+    with:
+      portalName: ${{ matrix.data.portalName }}
+      rallyTestSetIds: ${{ matrix.data.rallyTestSetIds }}
+      rallyBuildNos: ${{ matrix.data.rallyBuildNos }}
