push local code to master

--- a/.github/workflows/concurrency.yml
+++ b/.github/workflows/concurrency.yml
@@ -31,15 +31,27 @@ jobs:
           
           # Initialize associative array for portal to rally test set mapping
           declare -A PORTAL_TO_RALLY_TEST_SET_MAP
-          
+
+          # Function to safely read YAML file
+          read_yaml() {
+            local file=$1
+            local portal=$2
+            if [ -f "$file" ]; then
+              yq e ".suites[]" "$file" | while read -r suite; do
+                suite=$(echo "$suite" | tr -d "'")
+                matrix+="{\"portalName\": \"${portal}\", \"suiteName\": \"${suite}\"},"
+              done
+            else
+              echo "File $file not found"
+            fi
+          }
+
           # Build JSON array and map
           for i in "${!PORTAL_ARRAY[@]}"; do
-            suites=$(yq e ".suites" ".github/portals/${PORTAL_ARRAY[i]}.yml" | sed 's/^- //; s/^/'\''/; s/$/'\''/' | paste -sd, - | sed 's/^/[ /; s/$/ ]/')
-            IFS=',' read -ra SUITE_ARRAY <<< "$suites"
-            for suite in "${SUITE_ARRAY[@]}"; do
-              matrix+="{\"portalName\": \"${PORTAL_ARRAY[i]}\", \"suiteName\": ${suite}},"
-            done
-            PORTAL_TO_RALLY_TEST_SET_MAP["${PORTAL_ARRAY[i]}"]="${RALLY_TEST_SET_IDS_ARRAY[i]}"
+            portal=${PORTAL_ARRAY[i]}
+            rallyTestSetId=${RALLY_TEST_SET_IDS_ARRAY[i]}
+            read_yaml ".github/portals/${portal}.yml" "${portal}"
+            PORTAL_TO_RALLY_TEST_SET_MAP["${portal}"]="${rallyTestSetId}"
           done
 
           # Remove the last comma and close the JSON array
